@@ -29,7 +29,7 @@ import static org.junit.Assert.assertNotEquals;
 import static org.junit.Assert.assertNotNull;
 
 import hudson.model.User;
-import java.net.URL;
+import java.net.URI;
 import java.util.concurrent.atomic.AtomicReference;
 import org.htmlunit.HttpMethod;
 import org.htmlunit.WebRequest;
@@ -95,7 +95,7 @@ public class UserSeedPropertyRestartTest {
 
     private static void requestRenewSeedForUser(User user, JenkinsRule j) throws Exception {
         JenkinsRule.WebClient wc = j.createWebClient();
-        WebRequest request = new WebRequest(new URL(j.jenkins.getRootUrl() + user.getUrl() + "/descriptorByName/" + UserSeedProperty.class.getName() + "/renewSessionSeed/"), HttpMethod.POST);
+        WebRequest request = new WebRequest(new URI(j.jenkins.getRootUrl() + user.getUrl() + "/descriptorByName/" + UserSeedProperty.class.getName() + "/renewSessionSeed/").toURL(), HttpMethod.POST);
         wc.getPage(request);
     }
 }
